--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Quicksand', sans-serif;
+}
 
+.app {
+  display: flex;
+  flex-direction: column;
+  background-image: linear-gradient(#A5D9FF, #CAE8FC);
+  height: 100vh;
+  align-items: center;
+}
