--- a/src/styles/Cards.css
+++ b/src/styles/Cards.css
@@ -1,8 +1,63 @@
 .card-box {
-  background-color: white;
-  height: 20vh;
-  width: 15vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 40vh;
+  width: 25vw;
+  margin: 6vh 2vw;
+}
+
+.card-photo {
+  width:  25vw;
+  height: 32vh;
+  object-fit: cover;
+  margin: 3vh 2vw;
   border-radius: 5px;
+  box-shadow:
+    0 1px 1px hsl(0deg 0% 0% / 0.075),
+    0 2px 2px hsl(0deg 0% 0% / 0.075),
+    0 4px 4px hsl(0deg 0% 0% / 0.075),
+    0 8px 8px hsl(0deg 0% 0% / 0.075),
+    0 16px 16px hsl(0deg 0% 0% / 0.075)
+  ;
+}
+
+.card-details {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: white;
+  font-size: 0.9rem;
+  line-height: 1.4rem;
+  width: 25vw;
+  border-radius: 5px;
+  box-shadow:
+    0 1px 1px hsl(0deg 0% 0% / 0.075),
+    0 2px 2px hsl(0deg 0% 0% / 0.075),
+    0 4px 4px hsl(0deg 0% 0% / 0.075),
+    0 8px 8px hsl(0deg 0% 0% / 0.075),
+    0 16px 16px hsl(0deg 0% 0% / 0.075)
+  ;
+}
+
+.sub-details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 50%;
+}
+
+.send-btn {
+  cursor: pointer;
+  font-size: 1rem;
+  margin: 15% 0%;
+  background-color: #FF291A;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  width: 30%;
+  height: 4vh;
   box-shadow:
     0 1px 1px hsl(0deg 0% 0% / 0.075),
     0 2px 2px hsl(0deg 0% 0% / 0.075),
