--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,7 +1,7 @@
 .nav {
   display: flex;
   width: 100vw;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   padding: 0.6%;
   background-color: white;
@@ -14,10 +14,34 @@
   ;
 }
 
+.logo-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .nav-logo {
 margin-right: 1vw;
 }
 
 .nav-title {
   letter-spacing: 0.2rem;
+}
+
+.fav-spot-btn {
+  cursor: pointer;
+  font-size: 1rem;
+  background-color: #FF291A;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  margin-right: 2%;
+  width: 5%;
+  height: 4vh;
+  box-shadow:
+    0 1px 1px hsl(0deg 0% 0% / 0.075),
+    0 2px 2px hsl(0deg 0% 0% / 0.075),
+    0 4px 4px hsl(0deg 0% 0% / 0.075),
+    0 8px 8px hsl(0deg 0% 0% / 0.075),
+    0 16px 16px hsl(0deg 0% 0% / 0.075)
 }
