--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -36,7 +36,7 @@ margin-right: 1vw;
   border: none;
   border-radius: 4px;
   margin-right: 2%;
-  width: 5%;
+  width: 5vw;
   height: 4vh;
   box-shadow:
     0 1px 1px hsl(0deg 0% 0% / 0.075),
