--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,6 +9,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   background-image: linear-gradient(#A5D9FF, #CAE8FC);
   height: 100vh;
+  overflow-y: auto;
 }
