--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,9 +1,12 @@
 .nav {
   display: flex;
+  position: absolute;
+  z-index: 2;
   width: 100vw;
   justify-content: space-between;
   align-items: center;
-  padding: 0.6%;
+  padding: 0.7%;
+  padding-right: 4%;
   background-color: white;
   box-shadow:
     0 1px 1px hsl(0deg 0% 0% / 0.075),
@@ -21,7 +24,7 @@
 }
 
 .nav-logo {
-margin-right: 1vw;
+  margin-right: 1vw;
 }
 
 .nav-title {
@@ -36,7 +39,7 @@ margin-right: 1vw;
   border: none;
   border-radius: 4px;
   margin-right: 2%;
-  width: 5vw;
+  width: 7vw;
   height: 4vh;
   box-shadow:
     0 1px 1px hsl(0deg 0% 0% / 0.075),
@@ -44,4 +47,67 @@ margin-right: 1vw;
     0 4px 4px hsl(0deg 0% 0% / 0.075),
     0 8px 8px hsl(0deg 0% 0% / 0.075),
     0 16px 16px hsl(0deg 0% 0% / 0.075)
+}
+
+.fav-spot-btn:hover {
+  transform: translateY(-3px);
+  transition: 0.2s ease;
+  box-shadow:
+    0 2px 2px hsl(0deg 0% 0% / 0.075),
+    0 4px 4px hsl(0deg 0% 0% / 0.075),
+    0 8px 8px hsl(0deg 0% 0% / 0.075),
+    0 10px 10px hsl(0deg 0% 0% / 0.075),
+    0 20px 20px hsl(0deg 0% 0% / 0.075)
+  ;
+}
+
+.fav-spot-btn:active {
+  transform: translateY(0px);
+  transition: 0.2s ease;
+  box-shadow:
+    0 1px 1px hsl(0deg 0% 0% / 0.075),
+    0 2px 2px hsl(0deg 0% 0% / 0.075),
+    0 4px 4px hsl(0deg 0% 0% / 0.075),
+    0 8px 8px hsl(0deg 0% 0% / 0.075),
+    0 16px 16px hsl(0deg 0% 0% / 0.075)
+  ;
+}
+
+@media screen and (min-width: 975px) and (max-width: 1250px) {
+  .fav-spot-btn {
+    width: 9vw;
+    font-size: 0.9rem;
+  }
+  .logo-title {
+    font-size: 0.8rem;
+  }
+  .nav-logo {
+    height: 6vh;
+  }
+}
+
+@media screen and (min-width: 650px) and (max-width: 975px) {
+  .fav-spot-btn {
+    width: 11vw;
+    font-size: 0.8rem;
+  }
+  .logo-title {
+    font-size: 0.7rem;
+  }
+  .nav-logo {
+    height: 5vh;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .fav-spot-btn {
+    width: 12vw;
+    font-size: 0.6rem;
+  }
+  .logo-title {
+    font-size: 0.5rem;
+  }
+  .nav-logo {
+    height: 4vh;
+  }
 }
