--- a/src/styles/Cards.css
+++ b/src/styles/Cards.css
@@ -1,26 +1,23 @@
 .card-box {
+  width: 25vw;
+  height: 45vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  height: 40vh;
-  width: 25vw;
-  margin: 8vh 2vw;
+  justify-content: space-between;
 }
 
 .card-photo {
-  width:  25vw;
+  width: 100%;
   height: 32vh;
   object-fit: cover;
-  margin: 3vh 2vw;
   border-radius: 5px;
   box-shadow:
     0 1px 1px hsl(0deg 0% 0% / 0.075),
     0 2px 2px hsl(0deg 0% 0% / 0.075),
     0 4px 4px hsl(0deg 0% 0% / 0.075),
     0 8px 8px hsl(0deg 0% 0% / 0.075),
-    0 16px 16px hsl(0deg 0% 0% / 0.075)
-  ;
+    0 16px 16px hsl(0deg 0% 0% / 0.075);
 }
 
 .card-details {
