--- a/src/styles/Cards.css
+++ b/src/styles/Cards.css
@@ -1,6 +1,7 @@
 .card-box {
   width: 25vw;
   height: 45vh;
+  margin: 8vh 2vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,6 +12,7 @@
   width: 100%;
   height: 32vh;
   object-fit: cover;
+  margin: 3vh 2vw;
   border-radius: 5px;
   box-shadow:
     0 1px 1px hsl(0deg 0% 0% / 0.075),
