--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -29,6 +29,13 @@
 
 .nav-title {
   letter-spacing: 0.2rem;
+  font-weight: 900;
+}
+
+.fav-btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .fav-spot-btn {
@@ -71,6 +78,18 @@
     0 8px 8px hsl(0deg 0% 0% / 0.075),
     0 16px 16px hsl(0deg 0% 0% / 0.075)
   ;
+}
+
+.fav-spot-counter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.1rem;
+  font-weight: 900;
+  background-color: white;
+  color: #FF291A;
+  width: 2vw;
+  height: 2vh;
 }
 
 @media screen and (min-width: 975px) and (max-width: 1250px) {
